src/styles/base.css
@import "normalize.css";
@import "./media.css";

:root {
  /* ====== */

  /* BREAKPOINTS */
  --ye-bp-max-xs: 575px;
  --ye-bp-min-sm: 576px;
  --ye-bp-min-md: 768px;
  --ye-bp-min-lg: 992px;
  --ye-bp-min-xl: 1200px;
  --ye-bp-min-xxl: 1400px;

  /* COLORS */

  /* color definitions */
  --ye-color-accent: rgb(186 73 240 / 0.75);
  --ye-color-accent-dark: #4f2549;
  --ye-color-accent-light: #ffc880;
  --ye-color-background: var(--ye-color-white);
  --ye-color-background-card: var(--ye-color-white);
  --ye-color-background-content: var(--ye-color-white);
  --ye-color-background-secondary: #f9fafb;
  --ye-color-black: #000;
  --ye-color-black-5: rgb(0 0 0 / 0.05);
  --ye-color-black-10: rgb(0 0 0 / 0.1);
  --ye-color-black-75: rgb(0 0 0 / 0.75);
  --ye-color-black-50: rgb(0 0 0 / 0.5);
  --ye-color-border: rgb(0 0 0 / 0.05);
  --ye-color-danger: rgb(255 0 0);
  --ye-color-negative: #c45d65;
  --ye-color-positive: #39bf0a;
  --ye-color-primary: #f18904;
  --ye-color-ripple: var(--ye-color-shadow);
  --ye-color-shadow: rgb(0 0 0 / 0.1);
  --ye-color-shadow-inset: rgb(0 0 0 / 0.05);
  --ye-color-text: var(--ye-color-black);
  --ye-color-text-light: var(--ye-color-black-50);
  --ye-color-text-anchor: #1890ff;
  --ye-color-input-background: rgb(0 0 0 / 0.025);
  --ye-color-input-border: rgb(0 0 0 / 0.025);
  --ye-color-input-focus-background: #f6f7f8;
  --ye-color-input-focus-border: rgb(64 169 255);
  --ye-color-input-focus-shadow: rgb(64 164 255 / .75);

  /* TODO: focus and visited color to be different */
  --ye-color-text-anchor-focus: #40a9ff;
  --ye-color-text-anchor-visited: #005086;
  --ye-color-text-content: var(--ye-color-black);
  --ye-color-white: #fff;
  --ye-color-white-90: rgb(255 255 255 / 0.9);
  --ye-color-white-75: rgb(255 255 255 / 0.75);
  --ye-color-white-50: rgb(255 255 255 / 0.5);
  --ye-color-white-10: rgb(255 255 255 / 0.1);

  /* ====== */

  /* FONTS */

  /* Make sure the fonts are imported in the appropriate html (.storybook/preview-head.html for storybook) */
  --ye-font-family-body: "Poppins", "Helvetica Neue", helvetica, arial, sans-serif;
  --ye-font-family-title: "Poppins", "Helvetica Neue", helvetica, arial, sans-serif;
  --ye-font-family-mono: source-code-pro, "Menlo", "Monaco", "Consolas", "Courier New", monospace;
  --ye-font-family-input: var(--ye-font-family-body);

  /* type scale 1.2 (https://type-scale.com/) */
  --ye-font-size-em: 1.2em;
  --ye-font-size-mammoth: 2.488rem;
  --ye-font-size-xhuge: 2.074rem;
  --ye-font-size-huge: 1.728rem;
  --ye-font-size-xlarge: 1.44rem;
  --ye-font-size-large: 1.2rem;
  --ye-font-size-normal: 1rem;
  --ye-font-size-small: 0.833rem;
  --ye-font-size-xsmall: 0.694rem;
  --ye-font-size-tiny: 0.579rem;

  /* line heights */
  --ye-line-height: 1.5;
  --ye-line-height-thin: 1.25;

  /* weights */
  --ye-font-weight-black: 700;
  --ye-font-weight-bold: 600;
  --ye-font-weight-semibold: 500;
  --ye-font-weight-normal: 400;
  --ye-font-weight-light: 300;
  --ye-font-weight-thin: 200;

  /* ====== */

  /* SHADOWS */
  --ye-shadow-floating-highest: 0 2px 30px var(--ye-color-shadow);
  --ye-shadow-floating-high: 0 2px 12px var(--ye-color-shadow);
  --ye-shadow-floating-medium: 0 2px 6px var(--ye-color-shadow);
  --ye-shadow-floating-low: 0 1px 4px var(--ye-color-shadow);
  --ye-shadow-floating-lowest: 0 0 2px var(--ye-color-shadow);
  --ye-shadow-flying-medium: 0 10px 50px 0 var(--ye-color-shadow);
  --ye-shadow-inset: inset 0 2px 4px var(--ye-color-shadow-inset);
  --ye-shadow-inset-sm: inset 0 1px 2px var(--ye-color-shadow-inset);
  --ye-shadow-inset-none: inset 0 0 0 var(--ye-color-shadow-inset);
  --ye-shadow-outer-none: 0 0 0 var(--ye-color-shadow-inset);
  --ye-shadow-pressable: var(--ye-shadow-floating-low);
  --ye-shadow-hovered: var(--ye-shadow-floating-lowest);
  --ye-shadow-pressed: var(--ye-shadow-inset), var(--ye-shadow-outer-none);

  /* ====== */

  /* SPACING */

  /* relative */
  --ye-em-unit: 0.125em;
  --ye-em-base: 1em;
  --ye-spacing-em-tiny: calc(2 * var(--ye-em-unit));
  --ye-spacing-em-xsmall: calc(4 * var(--ye-em-unit));
  --ye-spacing-em-small: calc(6 * var(--ye-em-unit));
  --ye-spacing-em-normal: var(--ye-em-base);
  --ye-spacing-em-large: calc(10 * var(--ye-em-unit));
  --ye-spacing-em-xlarge: calc(12 * var(--ye-em-unit));
  --ye-spacing-em-huge: calc(16 * var(--ye-em-unit));
  --ye-spacing-em-xhuge: calc(20 * var(--ye-em-unit));

  /* fixed */
  --ye-rem-unit: 0.125rem;
  --ye-rem-base: 1rem;
  --ye-spacing-rem-tiny: calc(2 * var(--ye-rem-unit));
  --ye-spacing-rem-xsmall: calc(4 * var(--ye-rem-unit));
  --ye-spacing-rem-small: calc(6 * var(--ye-rem-unit));
  --ye-spacing-rem-normal: var(--ye-rem-base);
  --ye-spacing-rem-large: calc(10 * var(--ye-rem-unit));
  --ye-spacing-rem-xlarge: calc(12 * var(--ye-rem-unit));
  --ye-spacing-rem-huge: calc(16 * var(--ye-rem-unit));
  --ye-spacing-rem-xhuge: calc(20 * var(--ye-rem-unit));

  /* radii */
  --ye-radius-tiny: var(--ye-em-unit);
  --ye-radius-small: var(--ye-spacing-em-tiny);
  --ye-radius-normal: var(--ye-spacing-em-xsmall);
  --ye-radius-large: var(--ye-spacing-em-small);
  --ye-radius-xlarge: var(--ye-spacing-em-normal);
  --ye-radius-circle: 100%;

  /* ====== */

  /* TRANSITIONS */
  --ye-transition-function: ease-in-out;
  --ye-transition-duration: 250ms;

  /* ====== */

  /* LAYOUTS */

  --ye-layout-side-nav-width: 160px;
  --ye-layout-side-nav-toggle-width: 56px;

  /* HEIGHTS */

  --ye-height-page-content: calc(100vh - 88px);
  --ye-height-input: 2.5rem;
  --ye-height-input-inner: calc(var(--ye-height-input) - 2px);

  /* ====== */

  /* BUTTONS */
  --ye-button-border-radius: 3em;
  --ye-button-border-width: 0;
  --ye-button-cursor: pointer;
  --ye-button-outline-border-width: 1px;
  --ye-button-focus-shadow: var(--ye-shadow-pressed);
  --ye-button-font-weight: var(--ye-font-weight-semibold);
  --ye-button-hover-shadow: var(--ye-shadow-hovered);
  --ye-button-padding: var(--ye-spacing-em-small) var(--ye-spacing-em-large);
  --ye-button-outline-padding: calc(
    var(--ye-spacing-em-small) - var(--ye-button-outline-border-width)
  )
    calc(var(--ye-spacing-em-large) - var(--ye-button-outline-border-width));
  --ye-button-shadow: var(--ye-shadow-pressable);

  /* FORM */
  --ye-control-outline-padding: calc(
    var(--ye-spacing-em-small) - var(--ye-button-outline-border-width)
  )
    calc(var(--ye-spacing-em-normal) - var(--ye-button-outline-border-width));
  --ye-control-padding: var(--ye-spacing-em-small) var(--ye-spacing-em-normal);
  --ye-input-border-width: 0;
  --ye-input-border-radius: 3em;
  --ye-input-shadow: var(--ye-shadow-inset);

  /* COMPONENTS SPECIFIC */

  /* TOPNAV */
  --ye-topnav-expanded-color-bg: transparent;

}

/* media property import from ./media.css not working here */
@media (max-width: 991px) {
  :root {
    --ye-layout-side-nav-width: 240px;
    --ye-layout-side-nav-toggle-width: 0;
  }
}

* {
  box-sizing: border-box;
}

html,body {
  height: 100%;
}

html {
  background-color: var(--ye-color-background);
  overflow: auto;
}

body {
  overflow-x: hidden;
  color: var(--ye-color-text);
  font-weight: var(--ye-font-weight-normal);
  font-size: var(--ye-font-size-normal);
  font-size: clamp(100%, 1rem + 2vw, var(--ye-font-size-normal));
  font-family: var(--ye-font-family-body);
  line-height: var(--ye-line-height);
  background-color: var(--ye-color-background);
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-weight: var(--ye-font-weight-bold);
  font-family: var(--ye-font-family-title);
}

h1 {
  font-size: var(--ye-font-size-mammoth);
}

h2 {
  font-size: var(--ye-font-size-xhuge);
}

h3 {
  font-size: var(--ye-font-size-huge);
}

h4 {
  font-size: var(--ye-font-size-xlarge);
}

h5 {
  font-size: var(--ye-font-size-large);
}

h6 {
  font-size: var(--ye-font-size-normal);
}

code {
  font-family: var(--ye-font-family-mono);
}

.custom-scrollbar {
  scrollbar-width: thin;

  /* SCROLLBAR */

  /* New specs, works on Firefox */
  scrollbar-color: #f5f5f5 var(--ye-color-primary);

  /* Works on Chrome/Edge/Safari */
  &::-webkit-scrollbar-track {
    background-color: #f5f5f5;
    border-radius: var(--ye-radius-normal);
    box-shadow: inset 0 0 6px var(--ye-color-black-10);
  }

  &::-webkit-scrollbar {
    width: 8px;
    background-color: #f5f5f5;
  }

  &::-webkit-scrollbar-thumb {
    background-color: var(--ye-color-primary);
    border-radius: var(--ye-radius-normal);
    box-shadow: inset 0 0 6px var(--ye-color-black-10);
  }
}

